Add 1s delay before trying to reconnect to pa

BUG: 366320
FIXED-IN: 5.7.4